:sparkles: Add digital signage scripts

--- a/digital-signage/digital-signage-head.html
+++ b/digital-signage/digital-signage-head.html
@@ -4,4 +4,12 @@
     width: 1437px;
     height: 808px;
   }
+
+  .wsaf-events {
+    top: 290px;
+    left: 12px;
+    right: 12px;
+    bottom: 12px;
+    column-count: 5;
+  }
 </style>
