--- a/digital-signage/digital-signage-head.html
+++ b/digital-signage/digital-signage-head.html
@@ -10,6 +10,18 @@
     left: 12px;
     right: 12px;
     bottom: 12px;
-    column-count: 5;
+
+    gap: 12px;
+  }
+
+  .wsaf-events article {
+    height: 160px;
+    max-width: 500px;
+  }
+
+  .wsaf-heading {
+    top: 20px;
+    left: 0;
+    right: 0;
   }
 </style>
