:sparkles: Add empty states

--- a/digital-signage/big-screen-head.html
+++ b/digital-signage/big-screen-head.html
@@ -67,3 +67,7 @@
     display: none;
   }
 </style>
+<script>
+    const noContentImage = 'big_screen_none_left.png';
+    const refreshSeconds = 15;
+</script>
