--- a/digital-signage/digital-signage-head.html
+++ b/digital-signage/digital-signage-head.html
@@ -25,3 +25,7 @@
     right: 0;
   }
 </style>
+<script>
+  const noContentImage = 'digital_screens_none_left.png';
+  const refreshSeconds = 30;
+</script>
