--- a/digital-signage/digital-signage-head.html
+++ b/digital-signage/digital-signage-head.html
@@ -28,4 +28,5 @@
 <script>
   const noContentImage = 'digital_screens_none_left.png';
   const refreshSeconds = 30;
+  const showStartingSoonProbability = 0.5;
 </script>
