--- a/digital-signage/general-head.html
+++ b/digital-signage/general-head.html
@@ -249,7 +249,7 @@
       return startTime.getTime() <= cutoffDate;
     });
 
-    if (startingSoonEventInstances.length > 0) {
+    if (startingSoonEventInstances.length > 0 && !populateOculus) {
       // Determine if should show starting soon events
       if (Math.random() <= (showStartingSoonProbability || 0.5)) {
         // Update heading
@@ -293,11 +293,16 @@
       return;
     }
 
-    // Set to re-populate every minute
-    setInterval(populate, (refreshSeconds || 30) * 1000);
+    if (populateOculus) {
+      populateOculus();
+    }
+    else {
+      // Set to re-populate every minute
+      setInterval(populate, (refreshSeconds || 30) * 1000);
 
-    // Populate
-    populate();
+      // Populate
+      populate();
+    }
 
     // Refresh every 10 minutes to re-fetch stale data
     setInterval(() => location.reload(), 600000);
