:bug: Fix digital signage

--- a/digital-signage/big-screen-head.html
+++ b/digital-signage/big-screen-head.html
@@ -85,4 +85,5 @@
     const noContentImage = 'big_screen_none_left.png';
     const refreshSeconds = 15;
     const showStartingSoonProbability = 0.3;
+    const notOculus = true;
 </script>
