--- a/digital-signage/oculus-screens-head.html
+++ b/digital-signage/oculus-screens-head.html
@@ -80,6 +80,8 @@
   }
 </style>
 <script>
+    const notOculus = false;
+
     function populateDay(className, eventsDiv, startTime, endTime) {
       const dayDiv = document.createElement('div');
       dayDiv.classList.add(className);
