--- a/digital-signage/digital-signage-head.html
+++ b/digital-signage/digital-signage-head.html
@@ -29,4 +29,5 @@
   const noContentImage = 'digital_screens_none_left.png';
   const refreshSeconds = 30;
   const showStartingSoonProbability = 0.5;
+  const notOculus = true;
 </script>
