:sparkles: Update digi signage scripts

--- a/digital-signage/big-screen-head.html
+++ b/digital-signage/big-screen-head.html
@@ -11,7 +11,7 @@
     bottom: 45px;
     right: 7px;
 
-    gap: 8px;
+    margin: -4px;
   }
 
   .wsaf-events article {
@@ -19,6 +19,7 @@
     height: 135px;
     overflow: hidden;
     max-width: 30%;
+    margin: 4px;
   }
 
   .wsaf-events .time {
