--- a/digital-signage/digital-signage-head.html
+++ b/digital-signage/digital-signage-head.html
@@ -3,6 +3,7 @@
   .screensize {
     width: 1437px;
     height: 808px;
+    background-color: #087F9C;
   }
 
   .wsaf-events {
@@ -11,12 +12,13 @@
     right: 12px;
     bottom: 12px;
 
-    gap: 12px;
+    margin: -6px;
   }
 
   .wsaf-events article {
     height: 160px;
     max-width: 500px;
+    margin: 6px;
   }
 
   .wsaf-heading {
