--- a/digital-signage/general-head.html
+++ b/digital-signage/general-head.html
@@ -1,3 +1,13 @@
+<style>
+  body, .screensize, .id7-main-content-area, .id7-right-border, .id7-left-border, .id7-page-footer, .id7-site-footer {
+    background-color: #087F8C !important;
+    background-image: none !important;
+  }
+  div.image-component.margin-full {
+    margin-bottom: 0;
+  }
+</style>
+
 <link href="https://fonts.googleapis.com/css?family=Lexend" rel="stylesheet">
 <style>
   /* WSAF */
