--- a/digital-signage/oculus-screens-head.html
+++ b/digital-signage/oculus-screens-head.html
@@ -23,7 +23,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: start;
-    gap: 12px;
+    margin: -6px;
   }
 
   .wsaf-event-day-sat {
@@ -39,12 +39,13 @@
   }
 
   .wsaf-events article {
-    padding: 10px 15px;
+    padding: 2px 8px 8px;
     width: 30%;
+    margin: 6px;
   }
 
   .wsaf-events article .time {
-    font-size: 22px;
+    font-size: 19px;
   }
 
   .wsaf-events article .presented-by {
@@ -54,8 +55,8 @@
   }
 
   .wsaf-events article .title {
-    font-size: 24px;
-    line-height: 27px;
+    font-size: 20px;
+    line-height: 23px;
     text-wrap: wrap;
   }
 
