--- a/digital-signage/oculus-screens-head.html
+++ b/digital-signage/oculus-screens-head.html
@@ -3,6 +3,11 @@
   .screensize {
     width: 3840px;
     height: 2160px;
+
+    position: fixed;
+    left: 0;
+    top: 318px;
+    z-index: 500;
   }
 
   .wsaf-events {
@@ -73,7 +78,7 @@
   }
 
   .wsaf-events .old-event {
-    opacity: 0.8;
+    opacity: 0.5;
   }
 
   .wsaf-events .old-event .time {
